--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,4 +16,4 @@ jobs:
           go-version: ^1.17
         id: go
       - uses: actions/checkout@v2
-      - run: go build .
+      - run: make build
